# lvgl_drv_test_tool

./: CMakeLists.txt  README.md
driver/: Makefile  at24c02_drv.c  dht11_drv.c  sg90_drv.c  sr04_drv.c
include/: page_manager.h  ui.h
page/: Album_page.c  At24c02_page.c  Camera_page.c  DHT11_page.c  Sg90_page.c  Sr04_page.c  main_page.c  page_manager.c
sys/: main.c
test/: at24c02_test.c  dht11_test.c  sg90_test.c  sr04_test.c
ui/: CMakeLists.txt  lv_conf.h  ui.c
